fix post metadata styling
- Coloured bullets in Bootstrapping post
- Extra spacing (fixed in tabi)

--- a/content/blog/bootstrapping-and-simulation-based-inference/css/bootstrapping.css
+++ b/content/blog/bootstrapping-and-simulation-based-inference/css/bootstrapping.css
@@ -66,7 +66,7 @@ button:hover {
 }
 
 /* Text highlights */
-span:not(#ci-text):not(.colour-name):not(.nombre-del-color) {
+span:not(.separator):not(#ci-text):not(.colour-name):not(.nombre-del-color) {
     color: var(--primary-color);
     font-weight: 600;
     font-family: var(--sans-serif-font);
